# shopos-support-client

./: Cargo.toml  README.md
.github/workflows/: .gitkeep  build.yml
flutter/lib/: common.dart
flutter/lib/desktop/pages/: connection_page.dart  desktop_home_page.dart  desktop_setting_page.dart  install_page.dart
flutter/windows/runner/: Runner.rc
libs/hbb_common/src/: config.rs
libs/portable/: Cargo.toml
src/: main.rs
src/lang/: en.rs  ru.rs
src/platform/: windows.rs
